--- a/csharp/1-basic/arrays/ArraysSortAppConsole/ArraysSortAppConsole/ArraysSortAppConsole.csproj
+++ b/csharp/1-basic/arrays/ArraysSortAppConsole/ArraysSortAppConsole/ArraysSortAppConsole.csproj
@@ -43,6 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CoutingSort.cs" />
     <Compile Include="BubbleSort.cs" />
     <Compile Include="ISorteableArray.cs" />
     <Compile Include="Program.cs" />
