se agrega ejemplo de utilización de dictionaries para evitar switch.

--- a/.gitignore
+++ b/.gitignore
@@ -108,3 +108,6 @@ csharp/3-advance/patterns/creationals/FactoryMethod/.vs/FactoryMethod/DesignTime
 /csharp/2-intermediate/api/DMS/DMS.Library/obj/Debug
 /csharp/2-intermediate/api/DMS/DMS.UI/bin/Debug
 /csharp/2-intermediate/api/DMS/DMS.UI/obj/Debug
+/csharp/3-advance/dictionaries/.vs
+/csharp/3-advance/dictionaries/DictionariesConsole/bin/Debug
+/csharp/3-advance/dictionaries/DictionariesConsole/obj/Debug
